# contentful-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tests.http
src/: contentful_client.rs  contentful_management_client.rs  http_client.rs  lib.rs  models.rs  query_builder.rs
tests/: content_delivery_tests.rs  content_management_tests.rs
