[package]
name = "contentful"
version = "0.6.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Contentful API Rust Client"
homepage = "https://github.com/sajuthankappan/contentful-rs"
repository = "https://github.com/sajuthankappan/contentful-rs"
readme = "README.md"
keywords = ["contentful", "cms"]
categories = ["api-bindings"]

[dependencies]
getset = "0.1.1"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"]}
serde_json = "1.0.66"
serde = "1.0.127"
chrono = { version = "0.4.19", features= ["serde"]}

[dev-dependencies]
anyhow = "1.0.42"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.127", features = ["derive"]}
tokio = { version = "1.9.0", features=["full"]}
