[package]
name = "contentful-fork"
version = "0.0.1"
authors = ["Ahmed Umran Hussain <umran.hussein@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fork of the contentful crate with support for JSON fields"

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"]}
serde_json = "1.0.66"
serde = "1.0.127"
chrono = { version = "0.4.19", features= ["serde"]}

[dev-dependencies]
anyhow = "1.0.43"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.127", features = ["derive"]}
tokio = { version = "1.10.0", features=["full"]}
