[package]
name = "contentful"
version = "0.7.7"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Contentful API Rust Client"
homepage = "https://github.com/sajuthankappan/contentful-rs"
repository = "https://github.com/sajuthankappan/contentful-rs"
readme = "README.md"
keywords = ["contentful", "cms"]
categories = ["api-bindings"]

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"]}
serde_json = "1.0.93"
serde = "1.0.152"
chrono = { version = "0.4.23", features= ["serde"]}

[dev-dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"]}
tokio = { version = "1.25.0", features=["full"]}
